--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,31 +1,72 @@
 <div class="row">
   <div class="col-xs-3">
+
+    <div class="panel panel-default">
+      <div class="panel-image hide-panel-body">
+        <img src="/twitter-banner.jpg" class="panel-image-preview">
+      </div>
+      <div class="panel-footer">
+        <div class="row">
+          <div class="col-sm-2"><img src="/avatar.png" height="50px" width="50px" class="rounded-img home-avatar"></div>
+          <div class="col-sm-10"><h4 style="text-align: center;"><%= current_user.username %></h4></div>
+          <div class="col-sm-12" style="margin-top: 10px;">
+            <div class="col-sm-6" style="font-size: 80%; opacity: 0.7;">POSTS<br>
+              <h6 style="color: #0084B4; font-size: 200%;"><%= current_user.posts.count %></h6>
+            </div>
+            <div class="col-sm-6" style="font-size: 80%; opacity: 0.7;">FOLLOWERS<br>
+              <h6 style="color: #0084B4; font-size: 200%;"><%= 16 %></h6>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
     <div class="panel panel-default">
       <div class="panel-body">
-        <p> col 1</p>
+        <p> trends</p>
       </div>
     </div>
   </div>
   <div class="col-xs-6">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <p> col </p>
+    <%= render '/components/post_form' %><br><br>
+    <% for @p in @posts %>
+        <div class="panel panel-default post-panel">
+          <div class="panel-body row">
+            <div class="col-sm-1">
+              <img src="/avatar.png" class="rounded-img" height="50px" width="50px">
+            </div>
+            <div class="col-sm-10 col-sm-offset-1">
+              <p class="post-title"><span class="post-owner"><%= User.find(@p.user_id).username %></span> -
+                <span class="post-creation"><%= @p.created_at.strftime("%d %b %Y %I:%M%p") %></span></p>
+              <p class="post-content"> <%= @p.comment %> </p>
+            </div>
+            <div class="col-sm-12">
+              <p class="post-links">
+                <span class="glyphicon glyphicon-comment g-links" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-retweet g-links" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-heart g-links" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-option-horizontal g-links" aria-hidden="true"></span>
+                <a href="/">View Conversation</a>
+              </p>
+            </div>
+          </div>
+        </div>
+    <% end %>
+    <div class="panel panel-default post-panel">
+      <div class="panel-body row">
+        <div class="col-sm-12">
+          <center><img src="/icon.png" height="25px" width="25px"></center>
+          <center><a href="/#top"><p class="opacity: .7; color: grey;">Back to Top
+            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></p></a></center>
+
+        </div>
       </div>
     </div>
   </div>
   <div class="col-xs-3">
     <div class="panel panel-default">
       <div class="panel-body">
-        <p> col 3</p>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-3">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <p> col 1 --- row 2</p>
+        <p style="opacity: 0.5;"> © 2017 Twitter, Inc. Cookies Privacy Terms and Conditions</p>
       </div>
     </div>
   </div>
