--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,38 +1,40 @@
-
 <div class="row">
   <div class="jumbotron">
-    <h1>Hello, world!</h1>
-    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-  </div>
-</div>
-  <div class="row">
-  <div class="col-xs-3">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <p> col 1</p>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-6">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <p> col </p>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-3">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <p> col 3</p>
-      </div>
-    </div>
+    <h1><%= @user.try(:username) %></h1>
+    <!--<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>-->
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-3 col-xs-offset-9">
+  <div class="col-xs-3">
     <div class="panel panel-default">
       <div class="panel-body">
-        <p> col 1 --- row 2</p>
+        <p> profile /p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-xs-6">
+    <%= render 'components/post_form'%>
+
+    <% for @p in @posts %>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <p> <%= @p.comment %> </p>
+          </div>
+        </div>
+    <% end %>
+
+  </div>
+
+  <div class="col-xs-3">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p> who to follow</p>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p> trends </p>
       </div>
     </div>
   </div>
