GUI: styling home, landning and profile page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,12 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
-        <p> trends</p>
+        <h5 style="color: grey;">trends</h5>
+          <a href="">#trens #1</a></br>
+        <h5 style="color: grey; font-size: 120%;">trends</h5>
+          <a href="">#trens #2</a></br>
+        <h5 style="color: grey; font-size: 120%;">trends</h5>
+          <a href="">#trens #3</a></br>
       </div>
     </div>
   </div>
