--- a/app/views/pages/explore.html.erb
+++ b/app/views/pages/explore.html.erb
@@ -1,9 +1,79 @@
-<div class="col-xs-6">
-  <% for @p in @posts %>
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <p> <%= @p.comment %> </p>
+<div class="row">
+  <div class="col-xs-3">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p style="opacity: 0.5; font-size: 90%;">
+        <h5 style="color: grey; font-size: 140%">Explore</h5>
+
+        This page displays the posts from all people, helps to explore and follow new people.
+        </p>
+    </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h5 style="color: grey;">trends</h5>
+        <a href="">#trens #1</a></br>
+        <h5 style="color: grey; font-size: 120%;">trends</h5>
+        <a href="">#trens #2</a></br>
+        <h5 style="color: grey; font-size: 120%;">trends</h5>
+        <a href="">#trens #3</a></br>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-6">
+    <%= render '/components/post_form' %><% if user_signed_in? %><br><br><% end %>
+    <% for @p in @posts %>
+        <div class="panel panel-default post-panel">
+          <div class="panel-body row">
+            <div class="col-sm-1">
+              <img src="/avatar.png" class="rounded-img" height="50px" width="50px">
+            </div>
+            <div class="col-sm-10 col-sm-offset-1">
+              <p class="post-title"><span class="post-owner"><%= User.find(@p.user_id).username %></span> -
+                <span class="post-creation"><%= @p.created_at.strftime("%d %b %Y %I:%M%p") %></span></p>
+              <p class="post-content"> <%= @p.comment %> </p>
+            </div>
+            <div class="col-sm-12">
+              <p class="post-links">
+                <span class="glyphicon glyphicon-comment g-links" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-retweet g-links" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-heart g-links" aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-option-horizontal g-links" aria-hidden="true"></span>
+                <a href="/">View Conversation</a>
+              </p>
+            </div>
+          </div>
+        </div>
+    <% end %>
+    <div class="panel panel-default post-panel">
+      <div class="panel-body row">
+        <div class="col-sm-12">
+          <center><img src="/icon.png" height="25px" width="25px"></center>
+          <center><a href="/#top"><p class="opacity: .7; color: grey;">Back to Top
+            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></p></a></center>
+
         </div>
       </div>
-  <% end %>
+    </div>
+  </div>
+
+  <div class="col-xs-3">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h5 style="color: grey; font-size: 125%"> who to follow</h5>
+        <% @user = User.all %>
+        <% for @u in @user %>
+            <p style="font-weight: bold; opacity: 0.85"><a href="/user/<%= @u.try(:username)%>"><%= @u.try(:username)%></a></p>
+        <% end %>
+
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <p style="opacity: 0.5;"> © 2017 Twitter, Inc. Cookies Privacy Terms and Conditions</p>
+      </div>
+    </div>
+  </div>
 </div>
+
+
