--- a/app/views/components/_post_form.html.erb
+++ b/app/views/components/_post_form.html.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-body row">
     <div class="col-sm-1">
-      <img src="/avatar.png" class="rounded-img" height="35px" width="35px">
+      <img src="/profile.jpg" class="rounded-img" height="35px" width="35px">
     </div>
     <div class="col-sm-11">
       <%= form_for(@newpost) do |f| %>
