--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,38 +8,9 @@
 </head>
 <body>
 <%= render 'layouts/nav' %>
-<% if params[:username] != nil %>
-    <% @url = '/user/' + params[:username] %>
-    <% if current_page?(@url) %>
-        <img src="/twitter-banner.jpg" class="profile-banner">
-        <div class="row">
-          <div class="col-sm-12" style="background-color: white;">
-            <div class="container">
-              <div style="margin-left: 15px; margin-right: 15px">
-                <div class="col-sm-3">&nbsp;</div>
-                <div class="col-sm-6" style="margin-top: 5px">
-                  <div class="col-sm-2" style="font-size: 100%; opacity: 0.7;">POSTS<br>
-                    <h6 style="color: #0084B4; font-size: 150%;"><%= current_user.posts.count %></h6>
-                  </div>
-                  <div class="col-sm-2" style="font-size: 100%; opacity: 0.7;">FOLLOWERS<br>
-                    <h6 style="color: #0084B4; font-size: 150%;"> 16 </h6>
-                  </div>
-                  <div class="col-sm-8" style="text-align: right; margin-top: 5px;">
-                    <a href="/users/edit">
-                      <li type="button" class="btn btn-default" style="color: grey; opacity: 0.8; font-weight: bold;">Edit Profile</li></a>
-                  </div>
-
-                  </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        </div>
-    <% end %>
-<% end %>
+<%= render 'layouts/banner'%>
 <div class="container">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+
   <%= yield %>
 </div>
 
