--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-3">
     <div class="col-xs-12" style="margin-top: -200px;">
-      <img src="/avatar.png" height="200px" width="200px"  class="rounded-img">
+      <img src="/profile.jpg" height="200px" width="200px"  class="rounded-img">
     </div>
     <div class="col-xs-12" style="font-weight: bold;"><h3><%= params[:username]%></h3></div>
   </div>
@@ -13,7 +13,7 @@
         <div class="panel panel-default post-panel">
           <div class="panel-body row">
             <div class="col-sm-1">
-              <img src="/avatar.png" class="rounded-img" height="50px" width="50px">
+              <img src="/profile.jpg" class="rounded-img" height="50px" width="50px">
             </div>
             <div class="col-sm-10 col-sm-offset-1">
               <p class="post-title"><span class="post-owner"><%= User.find(@p.user_id).username %></span> -
@@ -26,7 +26,6 @@
                 <span class="glyphicon glyphicon-retweet g-links" aria-hidden="true"></span>
                 <span class="glyphicon glyphicon-heart g-links" aria-hidden="true"></span>
                 <span class="glyphicon glyphicon-option-horizontal g-links" aria-hidden="true"></span>
-                <a href="/">View Conversation</a>
               </p>
             </div>
           </div>
@@ -44,6 +43,8 @@
   </div>
 
   <div class="col-xs-3">
+    <%= render 'components/follow_button', :user => User.find_by_username(params[:username]) %>
+
     <div class="panel panel-default">
       <div class="panel-body">
         <h5 style="color: grey; font-size: 125%"> who to follow</h5>
