--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -6,41 +6,7 @@
     <div class="col-xs-12" style="font-weight: bold;"><h3><%= params[:username]%></h3></div>
   </div>
 
-  <div class="col-xs-6">
-    <%= render 'components/post_form' %>
-
-    <% for @p in @posts %>
-        <div class="panel panel-default post-panel">
-          <div class="panel-body row">
-            <div class="col-sm-1">
-              <img src="/profile.jpg" class="rounded-img" height="50px" width="50px">
-            </div>
-            <div class="col-sm-10 col-sm-offset-1">
-              <p class="post-title"><span class="post-owner"><%= User.find(@p.user_id).username %></span> -
-                <span class="post-creation"><%= @p.created_at.strftime("%d %b %Y %I:%M%p") %></span></p>
-              <p class="post-content"> <%= @p.comment %> </p>
-            </div>
-            <div class="col-sm-12">
-              <p class="post-links">
-                <span class="glyphicon glyphicon-comment g-links" aria-hidden="true"></span>
-                <span class="glyphicon glyphicon-retweet g-links" aria-hidden="true"></span>
-                <span class="glyphicon glyphicon-heart g-links" aria-hidden="true"></span>
-                <span class="glyphicon glyphicon-option-horizontal g-links" aria-hidden="true"></span>
-              </p>
-            </div>
-          </div>
-        </div>
-    <% end %>
-    <div class="panel-body row">
-      <div class="col-sm-12">
-        <center><img src="/icon.png" height="25px" width="25px"></center>
-        <center><a href="/#top"><p class="opacity: .7; color: grey;">Back to Top
-          <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></p></a></center>
-
-      </div>
-    </div>
-
-  </div>
+  <%= render 'post_section' %>
 
   <div class="col-xs-3">
     <%= render 'components/follow_button', :user => User.find_by_username(params[:username]) %>
